--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,6 +19,7 @@ sites:
     url: $SECRET_SITE
 
 status-website:
+ theme: dark
   # Add your custom domain below, or remove the next line if you don't have a domain
   cname: eaglenavigator.com
   # Uncomment the following line if you don't have a custom domain and add your repo name
